@startuml
' MonitoringService_component.puml (가이드 준수)

package "Interface Layer" {
  interface IMonitoringServiceApi
  component MonitoringServiceApiImpl
  IMonitoringServiceApi -- MonitoringServiceApiImpl
}

package "Business Layer" {
  interface IEquipmentStatusService
  interface IMonitoringTriggerService
  interface IMonitorEventConsumer
  interface IEquipmentStatusUpdater
  interface IEquipmentHeartbeatMonitor
  interface IEquipmentEventHandler
  
  component StatusReceiverManager
  component HeartbeatChecker
  component MonitorEventConsumer
  component EquipmentStatusTracker
  
  ' Service implementations
  IEquipmentStatusService -- StatusReceiverManager
  IMonitoringTriggerService -- HeartbeatChecker
  IMonitorEventConsumer -- MonitorEventConsumer
  IEquipmentStatusUpdater -- EquipmentStatusTracker
  IEquipmentHeartbeatMonitor -- EquipmentStatusTracker
  IEquipmentEventHandler -- EquipmentStatusTracker
  
  ' Business layer internal relationships
  StatusReceiverManager ..( IEquipmentStatusUpdater : <<use>>
  HeartbeatChecker ..( IEquipmentHeartbeatMonitor : <<use>>
  MonitorEventConsumer ..( IEquipmentEventHandler : <<use>>

  note right of HeartbeatChecker
    Periodically checks equipment status
    and emits timeout alerts
  end note

  note right of StatusReceiverManager
    Processes real-time equipment status
    reports and detects direct faults
  end note
}

package "System Interface Layer" {
  interface IMonitorRepository
  interface IMessagePublisherService
  interface IMessageSubscriptionService
  interface ISchedulerService
  
  component MonitorRepositoryImpl
  component MessageBrokerComponent
  component SchedulerServiceImpl
  database MonitorDatabase
  
  ' System interface implementations
  IMonitorRepository -- MonitorRepositoryImpl
  IMessagePublisherService -- MessageBrokerComponent
  IMessageSubscriptionService -- MessageBrokerComponent
  ISchedulerService -- SchedulerServiceImpl
  
  ' System dependencies
  MonitorRepositoryImpl ..( MonitorDatabase
  MessageBrokerComponent ..( IMonitorEventConsumer : <<IDomainEvent>>
}

' 패키지 외부 연결
' Interface Layer -> Business Layer
MonitoringServiceApiImpl ..( IEquipmentStatusService : <<use>>

' Business Layer -> Message Broker 연결
StatusReceiverManager ..( IMessagePublisherService : <<publish>>
HeartbeatChecker ..( IMessagePublisherService : <<publish>>
MonitorEventConsumer ..( IMessageSubscriptionService : <<subscribe>>

' Business Layer -> System Interface Layer
StatusReceiverManager ..( IMonitorRepository : <<persist>>
HeartbeatChecker ..( IMonitorRepository : <<persist>>
MonitorEventConsumer ..( IMonitorRepository : <<persist>>
HeartbeatChecker ..( ISchedulerService : <<schedule>>

legend right
  Monitoring Service structure
  - Equipment status monitoring
  - Heartbeat-based fault detection
  - Event-driven status updates
  - Scheduled health checks
end legend

@enduml
